--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@stomp/stompjs": "^7.2.1",
+    "buffer": "^6.0.3",
+    "chess.js": "^1.4.0",
+    "crypto-browserify": "^3.12.1",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
