--- a/.github/workflows/angular-build.yml
+++ b/.github/workflows/angular-build.yml
@@ -1,41 +1,34 @@
-name: Angular Build
+name: Angular Build & Deploy
 
-# Déclenche le workflow à chaque push sur n'importe quelle branche
 on:
   push:
     branches:
       - '**'
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Récupérer le code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Installer Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20' # adapte selon la version utilisée par ton projet
+          node-version: '20'
 
-      # 3️⃣ Installer Angular CLI globalement si besoin
       - name: Install Angular CLI
         run: npm install -g @angular/cli
 
-      # 4️⃣ Installer les dépendances du projet
       - name: Install dependencies
         run: npm ci
 
-      # 5️⃣ Lancer le build Angular
       - name: Build Angular project
-        run: npm run build -- --configuration production
+        run: ng build --configuration production
 
-      # 6️⃣ Sauvegarder le build comme artefact (version corrigée)
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v6
         with:
-          name: angular-build
-          path: dist/
+          branch: gh-pages # branche où GitHub Pages sert les fichiers
+          folder: dist/chess-app # dossier généré par Angular
