--- a/.github/workflows/angular-build.yml
+++ b/.github/workflows/angular-build.yml
@@ -30,5 +30,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages # branche où GitHub Pages sert les fichiers
-          folder: dist/chess-app # dossier généré par Angular
+          branch: gh-pages
+          folder: dist/chess-app
+          token: ${{ secrets.GITHUB_TOKEN }}
