--- a/.github/workflows/angular-build.yml
+++ b/.github/workflows/angular-build.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm ci
 
       - name: Build Angular project
-        run: ng build --configuration production
+        run: ng build --configuration production --base-href /frontendechec/
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
